--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "opensubtitles-api": "^5.0.1",
     "pug": "^2.0.3",
     "rarbg-api": "^1.1.3",
+    "rimraf": "^2.6.3",
     "serialize": "^0.1.3",
     "socket.io": "^2.2.0",
     "srt-to-vtt": "^1.1.3",
