Player almost done

--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.17",
     "allocine-api": "^0.1.9",
     "better-sqlite3": "^5.4.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "email-templates": "^5.0.3",
     "express": "^4.16.4",
+    "fluent-ffmpeg": "^2.0.0-rc1",
     "imdb-api": "^4.0.2",
     "iplocation": "^6.1.0",
     "mime-types": "^2.1.22",
