--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,13 @@
     "node-serialize": "0.0.4",
     "nodemailer": "^4.7.0",
     "opensubtitles-api": "^5.0.1",
+    "passport": "^0.4.0",
+    "passport-42": "^1.2.5",
+    "passport-discord": "^0.1.3",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-slack": "0.0.7",
+    "passport-twitch": "^1.0.3",
     "pug": "^2.0.3",
     "rarbg-api": "^1.1.3",
     "rimraf": "^2.6.3",
