--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "blob-util": "^2.0.2",
     "element-ui": "^2.4.11",
