--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "fluent-ffmpeg": "^2.0.0-rc1",
     "imdb-api": "^4.0.2",
     "iplocation": "^6.1.0",
+    "left-pad": "^1.3.0",
     "mime-types": "^2.1.22",
     "mongoose": "^5.4.7",
     "multer": "^1.4.1",
